--- a/index.html
+++ b/index.html
@@ -76,18 +76,14 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/budong-drummond/">LinkedIn</a>
       <a class="footer-link" href="https://github.com/budongdrummond/">GitHub</a>
-      <a class="footer-link" href="https://budongdrummond.myportfolio.com/">Photography Portfolio</a>
+      <a class="footer-link" href="https://budongdrummond.myportfolio.com/">Photography</a>
       <p class="copyright-txt">© 2020 Budong Drummond.</p>
       <p class="icons-attribution-txt">
-        Icons made by '<a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a>', '<a
-          href="https://www.flaticon.com/authors/freepik"
-          title="Freepik"
-          >Freepik</a
-        >', '<a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a>', '<a
-          href="https://www.flaticon.com/authors/good-ware"
-          title="Good Ware"
-          >Good Ware</a
-        >', '<a href="https://www.flaticon.com/authors/srip" title="srip">srip</a>. They are acquired from
+        Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">"Eucalyp" </a>,
+        <a href="https://www.flaticon.com/authors/freepik" title="Freepik">"Freepik" </a>,
+        <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">"Pixel perfect" </a>,
+        <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">"Good Ware" </a>,
+        <a href="https://www.flaticon.com/authors/srip" title="srip">"srip" </a>. They are acquired from
         <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
       </p>
     </div>
